maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:5: error: ')' expected but ';' found.
   {keepHandOnSideWall()};allerAuNord()
                         ^